--- a/QuanLyDeCuongProject/QuanLyDeCuongProject.csproj
+++ b/QuanLyDeCuongProject/QuanLyDeCuongProject.csproj
@@ -95,6 +95,8 @@
     <Compile Include="QL_Nganh.Designer.cs">
       <DependentUpon>QL_Nganh.cs</DependentUpon>
     </Compile>
+    <Compile Include="Queries\PermissionQuery.cs" />
+    <Compile Include="Queries\QuyenQuery.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="QL_Nganh.resx">
       <DependentUpon>QL_Nganh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="QuanLyPhanQuyen.resx">
+      <DependentUpon>QuanLyPhanQuyen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
