--- a/QuanLyDeCuongProject/packages.config
+++ b/QuanLyDeCuongProject/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
+  <package id="Syncfusion.Compression.Base" version="28.1.36" targetFramework="net48" />
+  <package id="Syncfusion.DocIO.WinForms" version="28.1.36" targetFramework="net48" />
+  <package id="Syncfusion.Licensing" version="28.1.36" targetFramework="net48" />
+  <package id="Syncfusion.OfficeChart.Base" version="28.1.36" targetFramework="net48" />
 </packages>
